intermediate fixes
