# api/server.go
@@ -41,6 +41,9 @@ type scout interface {
 		jumpstartPeriod *int,
 		limit *int,
 	) error
+	UpdateProfileVersion(ctx context.Context, profileID int64, version int64, update models.VersionUpdate) error
+	CreateProfileVersion(ctx context.Context, profileID int64, version models.ProfileVersion) (int64, error)
+	DeployProfileVersion(ctx context.Context, profileID int64, version int64) error
 }
 
 type redditToolkit interface {
@@ -193,6 +196,7 @@ func (s *Server) PostApiAnalyze(
 		request.Body.SourceId,
 		models.ProfileSettings{
 			ProfileID:           -1,
+			Version:             -1,
 			RelevancyFilter:     request.Body.RelevancyFilter,
 			ExtractedProperties: request.Body.ExtractedProperties,
 		},
@@ -266,13 +270,15 @@ func (s *Server) PostApiDetectionsList(
 	for _, detection := range detections {
 		oapiDetection := oapi.ListedDetection{
 			Detection: oapi.Detection{
-				CreatedAt:  detection.CreatedAt.Format(time.RFC3339),
-				Id:         int(detection.ID),
-				IsRelevant: detection.IsRelevant,
-				ProfileId:  int(detection.ProfileID),
-				Properties: detection.Properties,
-				Source:     detection.Source,
-				SourceId:   detection.SourceID,
+				CreatedAt:      detection.CreatedAt.Format(time.RFC3339),
+				Id:             int(detection.ID),
+				IsRelevant:     detection.IsRelevant,
+				ProfileId:      int(detection.ProfileID),
+				TestMode:       &detection.TestMode,
+				ProfileVersion: int(detection.Version),
+				Properties:     detection.Properties,
+				Source:         detection.Source,
+				SourceId:       detection.SourceID,
 			},
 			SourcePost: nil,
 			Tags:       nil,
@@ -419,33 +425,120 @@ func (s *Server) PostApiProfilesIdJumpstart(
 	return oapi.PostApiProfilesIdJumpstart204Response{}, nil
 }
 
+// PostApiProfilesIdVersion implements oapi.StrictServerInterface.
+func (s *Server) PostApiProfilesIdVersion(ctx context.Context, request oapi.PostApiProfilesIdVersionRequestObject) (oapi.PostApiProfilesIdVersionResponseObject, error) {
+	createdVersion, err := s.scout.CreateProfileVersion(ctx, int64(request.Id), profileVersionFromOapi(*request.Body))
+	if err != nil {
+		//nolint:nilerr // error is passed to response
+		return oapi.PostApiProfilesIdVersion500JSONResponse{Error: err.Error()}, nil
+	}
+
+	return oapi.PostApiProfilesIdVersion200JSONResponse{Id: int(createdVersion)}, nil
+}
+
+// PostApiProfilesIdVersionVersionDeploy implements oapi.StrictServerInterface.
+func (s *Server) PostApiProfilesIdVersionVersionDeploy(ctx context.Context, request oapi.PostApiProfilesIdVersionVersionDeployRequestObject) (oapi.PostApiProfilesIdVersionVersionDeployResponseObject, error) {
+	err := s.scout.DeployProfileVersion(ctx, int64(request.Id), int64(request.Version))
+	if err != nil {
+		//nolint:nilerr // error is passed to response
+		return oapi.PostApiProfilesIdVersionVersionDeploy500JSONResponse{Error: err.Error()}, nil
+	}
+
+	return oapi.PostApiProfilesIdVersionVersionDeploy204Response{}, nil
+}
+
+// PutApiProfilesIdVersionVersion implements oapi.StrictServerInterface.
+func (s *Server) PutApiProfilesIdVersionVersion(ctx context.Context, request oapi.PutApiProfilesIdVersionVersionRequestObject) (oapi.PutApiProfilesIdVersionVersionResponseObject, error) {
+	err := s.scout.UpdateProfileVersion(
+		ctx,
+		int64(request.Id),
+		int64(request.Version),
+		profileVersionUpdateFromOapi(int64(request.Version), *request.Body),
+	)
+	if err != nil {
+		//nolint:nilerr // error is passed to response
+		return oapi.PutApiProfilesIdVersionVersion500JSONResponse{Error: err.Error()}, nil
+	}
+
+	return oapi.PutApiProfilesIdVersionVersion204Response{}, nil
+}
+
+func profileVersionUpdateFromOapi(version int64, update oapi.ProfileVersionUpdate) models.VersionUpdate {
+	modelUpdate := models.VersionUpdate{
+		Version:         version,
+		DefaultSettings: nullable.Null[models.ProfileSettings](),
+		SourcesSettings: nil,
+	}
+
+	if update.DefaultSettings.IsSpecified() {
+		if !update.DefaultSettings.IsNull() {
+			modelUpdate.DefaultSettings = nullable.Value(profileSettingsFromOapi(update.DefaultSettings.MustGet()))
+		}
+	}
+
+	if update.SourcesSettings != nil {
+		modelUpdate.SourcesSettings = make(map[string]*models.ProfileSettings)
+
+		for source, settings := range *update.SourcesSettings {
+			if settings == nil {
+				modelUpdate.SourcesSettings[source] = nil
+			} else {
+				modelUpdate.SourcesSettings[source] = lo.ToPtr(profileSettingsFromOapi(*settings))
+			}
+		}
+	}
+
+	return modelUpdate
+}
+
 func profileFromModel(profile models.Profile) oapi.Profile {
+	oapiVersions := make([]oapi.ProfileVersion, 0, len(profile.Versions))
+
+	for _, version := range profile.Versions {
+		oapiVersions = append(oapiVersions, profileVersionFromModel(version))
+	}
+
 	oapiProfile := oapi.Profile{
 		CreatedAt:       lo.ToPtr(profile.CreatedAt.Format(time.RFC3339)),
 		Id:              int(profile.ID),
 		Name:            profile.Name,
-		DefaultSettings: nil,
-		SourcesSettings: &map[string]oapi.ProfileSettings{},
 		UpdatedAt:       lo.ToPtr(profile.UpdatedAt.Format(time.RFC3339)),
-	}
-
-	if profile.DefaultSettings != nil {
-		oapiProfile.DefaultSettings = lo.ToPtr(profileSettingsFromModel(*profile.DefaultSettings))
-	}
-
-	for source, settings := range profile.SourcesSettings {
-		(*oapiProfile.SourcesSettings)[source] = profileSettingsFromModel(settings)
+		SelectedVersion: lo.ToPtr(int(profile.SelectedVersion)),
+		Versions:        &oapiVersions,
 	}
 
 	return oapiProfile
+}
+
+func profileVersionFromModel(version models.ProfileVersion) oapi.ProfileVersion {
+	oapiVersion := oapi.ProfileVersion{
+		CreatedAt: version.CreatedAt.Format(time.RFC3339),
+		TestMode:  lo.ToPtr(version.TestMode),
+		UpdatedAt: version.UpdatedAt.Format(time.RFC3339),
+		Version:   int(version.Version),
+	}
+
+	if version.DefaultSettings != nil {
+		oapiVersion.DefaultSettings = oapinullable.NewNullableWithValue(profileSettingsFromModel(*version.DefaultSettings))
+	}
+
+	if len(version.SourcesSettings) > 0 {
+		sourcesSettings := make(map[string]*oapi.ProfileSettings)
+
+		for source, settings := range version.SourcesSettings {
+			sourcesSettings[source] = lo.ToPtr(profileSettingsFromModel(settings))
+		}
+
+		oapiVersion.SourcesSettings = &sourcesSettings
+	}
+
+	return oapiVersion
 }
 
 func profileSettingsFromModel(settings models.ProfileSettings) oapi.ProfileSettings {
 	return oapi.ProfileSettings{
 		ExtractedProperties: settings.ExtractedProperties,
 		RelevancyFilter:     settings.RelevancyFilter,
-		CreatedAt:           lo.ToPtr(settings.CreatedAt.Format(time.RFC3339)),
-		UpdatedAt:           lo.ToPtr(settings.UpdatedAt.Format(time.RFC3339)),
 	}
 }
 
@@ -471,23 +564,49 @@ func detectionFromModel(detection models.Detection) oapi.Detection {
 
 func profileFromOapi(profile oapi.Profile) models.Profile {
 	modelProfile := models.Profile{
-		ID:              int64(profile.Id),
-		Name:            profile.Name,
-		DefaultSettings: nil,
-		SourcesSettings: map[string]models.ProfileSettings{},
+		ID:       int64(profile.Id),
+		Name:     profile.Name,
+		Versions: make([]models.ProfileVersion, 0, len(*profile.Versions)),
 	}
 
-	if profile.DefaultSettings != nil {
-		modelProfile.DefaultSettings = lo.ToPtr(profileSettingsFromOapi(*profile.DefaultSettings))
+	if profile.SelectedVersion != nil {
+		modelProfile.SelectedVersion = int64(*profile.SelectedVersion)
 	}
 
-	if profile.SourcesSettings != nil {
-		for source, settings := range *profile.SourcesSettings {
-			modelProfile.SourcesSettings[source] = profileSettingsFromOapi(settings)
-		}
+	if profile.Versions != nil {
+		modelProfile.Versions = lo.Map(*profile.Versions, func(version oapi.ProfileVersion, _ int) models.ProfileVersion {
+			return profileVersionFromOapi(version)
+		})
 	}
 
 	return modelProfile
+}
+
+func profileVersionFromOapi(version oapi.ProfileVersion) models.ProfileVersion {
+	modelVersion := models.ProfileVersion{
+		Version:   int64(version.Version),
+		TestMode:  false,
+		CreatedAt: time.Time{},
+		UpdatedAt: time.Time{},
+	}
+
+	if version.DefaultSettings.IsSpecified() {
+		if !version.DefaultSettings.IsNull() {
+			modelVersion.DefaultSettings = lo.ToPtr(profileSettingsFromOapi(version.DefaultSettings.MustGet()))
+		}
+	}
+
+	if version.SourcesSettings != nil && len(*version.SourcesSettings) > 0 {
+		sourcesSettings := make(map[string]models.ProfileSettings)
+
+		for source, settings := range *version.SourcesSettings {
+			sourcesSettings[source] = profileSettingsFromOapi(*settings)
+		}
+
+		modelVersion.SourcesSettings = sourcesSettings
+	}
+
+	return modelVersion
 }
 
 func profileSettingsFromOapi(settings oapi.ProfileSettings) models.ProfileSettings {
@@ -499,57 +618,11 @@ func profileSettingsFromOapi(settings oapi.ProfileSettings) models.ProfileSettin
 
 func profileUpdateFromOapi(profileID int64, update oapi.ProfileUpdate) models.ProfileUpdate {
 	modelUpdate := models.ProfileUpdate{
-		ProfileID:       profileID,
-		Name:            update.Name,
-		DefaultSettings: nullable.Unset[models.ProfileSettingsUpdate](),
-		SourcesSettings: map[string]*models.ProfileSettingsUpdate{},
-	}
-
-	switch {
-	case !update.DefaultSettings.IsSpecified():
-		modelUpdate.DefaultSettings = nullable.Unset[models.ProfileSettingsUpdate]()
-	case update.DefaultSettings.IsNull():
-		modelUpdate.DefaultSettings = nullable.Null[models.ProfileSettingsUpdate]()
-	default:
-		modelUpdate.DefaultSettings = nullable.Value(profileSettingsUpdateFromOapi(update.DefaultSettings.MustGet()))
-	}
-
-	if update.SourcesSettings != nil {
-		for source, settings := range *update.SourcesSettings {
-			if settings == nil {
-				modelUpdate.SourcesSettings[source] = nil
-
-				continue
-			}
-
-			modelUpdate.SourcesSettings[source] = lo.ToPtr(profileSettingsUpdateFromOapi(*settings))
-		}
+		ProfileID: profileID,
+		Name:      update.Name,
 	}
 
 	return modelUpdate
-}
-
-func profileSettingsUpdateFromOapi(settings oapi.ProfileSettingsUpdate) models.ProfileSettingsUpdate {
-	modelProfileSettingsUpdate := models.ProfileSettingsUpdate{
-		RelevancyFilter:     settings.RelevancyFilter,
-		ExtractedProperties: nil,
-	}
-
-	if settings.ExtractedProperties != nil {
-		extractedProperties := make(map[string]string)
-
-		for key, value := range *settings.ExtractedProperties {
-			if value == nil {
-				continue
-			}
-
-			extractedProperties[key] = *value
-		}
-
-		modelProfileSettingsUpdate.ExtractedProperties = &extractedProperties
-	}
-
-	return modelProfileSettingsUpdate
 }
 
 func detectionQueryFromOapi(request oapi.DetectionListRequest) models.DetectionQuery {
