# pkg/models/profile.go
@@ -7,8 +7,22 @@ import (
 )
 
 type Profile struct {
-	ID              int64                      `json:"id"`
-	Name            string                     `json:"name"`
+	ID              int64            `json:"id"`
+	Name            string           `json:"name"`
+	SelectedVersion int64            `json:"selected_version"`
+	Versions        []ProfileVersion `json:"versions"`
+	CreatedAt       time.Time        `json:"created_at"`
+	UpdatedAt       time.Time        `json:"updated_at"`
+}
+
+type ProfileCreateInput struct {
+	Name    string
+	Version ProfileVersion
+}
+
+type ProfileVersion struct {
+	Version         int64                      `json:"version"`
+	TestMode        bool                       `json:"test_mode"`
 	DefaultSettings *ProfileSettings           `json:"default_settings"`
 	SourcesSettings map[string]ProfileSettings `json:"sources_settings"`
 	CreatedAt       time.Time                  `json:"created_at"`
@@ -17,23 +31,18 @@ type Profile struct {
 
 type ProfileSettings struct {
 	ProfileID           int64             `json:"profile_id"`
+	Version             int64             `json:"version"`
 	RelevancyFilter     string            `json:"relevancy_filter"`
 	ExtractedProperties map[string]string `json:"extracted_properties"`
-	CreatedAt           time.Time         `json:"created_at"`
-	UpdatedAt           time.Time         `json:"updated_at"`
 }
 
 type ProfileUpdate struct {
 	ProfileID int64
 	Name      *string
-	// If the value is not set, it will be ignored
-	//
-	// If the value is set, null means that default settings must be deleted
-	DefaultSettings nullable.Nullable[ProfileSettingsUpdate]
-	SourcesSettings map[string]*ProfileSettingsUpdate
 }
 
-type ProfileSettingsUpdate struct {
-	RelevancyFilter     *string
-	ExtractedProperties *map[string]string
+type VersionUpdate struct {
+	Version         int64
+	DefaultSettings nullable.Nullable[ProfileSettings]
+	SourcesSettings map[string]*ProfileSettings
 }
